# sqlx

./: Cargo.toml  Dockerfile  README.md  deploy.sh
migrations/: 20241116204402_init.sql
src/: delete.rs  insert.rs  main.rs  model.rs  select.rs  transaction.rs  update.rs
